--- a/src/styles/sass/Animations.module.scss
+++ b/src/styles/sass/Animations.module.scss
@@ -1,6 +1,6 @@
 .slide-in {
-  transform: translateY(-100%);
-  -webkit-transform: translateY(-100%);
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
 }
 
 .slide-in {
@@ -10,12 +10,12 @@
 
 @keyframes slide-in {
   100% {
-    transform: translateY(0%);
+    transform: translateX(0%);
   }
 }
 
 @-webkit-keyframes slide-in {
   100% {
-    -webkit-transform: translateY(0%);
+    -webkit-transform: translateX(0%);
   }
 }
