--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,12 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Uni Sans", Verdana, Tahoma;
-  background-color: var(--color-primary-900);
+}
+
+@layer base {
+  body {
+    @apply bg-swatch-1;
+  }
 }
 
 a {
@@ -39,4 +44,25 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@layer components {
+  .sidebar-icon {
+    @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto text-green-500 hover:text-white hover:rounded-xl rounded-3xl transition-all duration-300 ease-linear cursor-pointer;
+  }
+
+  .sidebar-tooltip {
+    @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md
+    text-white bg-swatch-5
+    text-xs font-semibold 
+    transition-all duration-100 scale-0 origin-left;
+  }
+}
+
+.trans-grow {
+  transition: all 0.2s ease-in-out;
+}
+
+.trans-grow:hover {
+  transform: scale(1.1);
 }
