--- a/src/styles/sass/Animations.module.scss
+++ b/src/styles/sass/Animations.module.scss
@@ -19,3 +19,19 @@
     -webkit-transform: translateX(0%);
   }
 }
+
+@keyframes growDown {
+  0% {
+    transform: scaleY(0);
+  }
+  80% {
+    transform: scaleY(1.1);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+.growdown {
+  animation: growDown 300ms ease-in-out forwards;
+}
